add wallpaper show

--- a/Download/Download-Info.plist
+++ b/Download/Download-Info.plist
@@ -27,7 +27,7 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
-	<key>CFHasWallpaperPlayerTab</key>
+	<key>CFHasWallpaperTab</key>
 	<true/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
